GNOME Bugzilla – Bug 781086
todo.txt: fix possible memory leak
Last modified: 2017-04-20 15:34:27 UTC
.
Created attachment 349549 [details] [review] todo.txt: fix possible memory leak
Review of attachment 349549 [details] [review]: I think this patch can instead change the GDate to be stack-allocated. Like: GDate date; g_date_clear (&date); ...
Created attachment 350141 [details] [review] todo.txt: fix possible memory leak Same patch using a stack-allocated GDate.
Attachment 350141 [details] pushed as 32edb17 - todo.txt: fix possible memory leak