todo.txt: fix possible memory leak

https://bugzilla.gnome.org/show_bug.cgi?id=781086